# plynf

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACTS.md  CONTRIBUTING.md  CONVENTIONS.md  EXECUTIVE_SUMMARY.md  INSTALL.md  LICENSE  Makefile  OVERVIEW.md  PLAYBOOK.md  README.md  ROADMAP.md  SECURITY.md  TECHNICAL_REFERENCE.md  docker-compose.yml  pyproject.toml
benchmarks/: README.md  pyproject.toml
benchmarks/results/: README.md
benchmarks/results/raw-v1.1/: gateway_invoke_cached_1778413030.json  gateway_invoke_cold_1778413030.json  identity_token_issue_1778413030.json  suite_1778413030.json  workspace_files_1778413030.json  workspace_kv_1778413030.json  workspace_snapshot_1778413030.json
benchmarks/src/plinth_bench/: __init__.py  __main__.py  compare.py  reporter.py  runner.py
benchmarks/tests/: test_runner.py
benchmarks/workflows/: MODEL.md  README.md  RESULTS.md  SIMULATION_RESULTS.md  __init__.py  harness.py  run_all.py  run_simulation.py  simulation.py
benchmarks/workflows/results/: 20260521-142754-suite.json  20260521-142905-suite.json  20260521-152500-simulation-n100.json  20260521-152605-simulation-n100.json
benchmarks/workflows/scenarios/: __init__.py  code_review_pr.py  customer_support_escalation.py  doc_qa_50_contracts.py  multi_agent_content.py  report_writing.py  research_30_pdf.py  research_5_source.py  sales_lead_enrichment.py
cli/: Dockerfile  README.md  pyproject.toml
cli/src/plinth_cli/: __init__.py  __main__.py  _http.py  client.py  config.py  main.py  output.py  settings.py
cli/tests/: conftest.py  test_audit.py  test_client.py  test_completion_and_misc.py  test_config.py  test_health.py  test_main.py  test_migrate.py  test_output.py  test_services.py  test_tenant.py  test_workflow.py
examples/02-multi-agent-handoff/: README.md  orchestrate.py  pyproject.toml  researcher.py  reviewer.py  shared.py  topics.json  writer.py
examples/03-resumable-workflow/: README.md  crash_resume.py  pyproject.toml  shared.py  workflow_agent.py
examples/04-github-issue-triage/: README.md  pyproject.toml  shared.py  triage_agent.py
examples/04-github-issue-triage/reports/: triage-demo-repo-simulation.md
examples/05-durable-workflow/: README.md  handlers.py  handlers.ts  pyproject.toml  shared.py  shared.ts  start-workflow.ts  start_workflow.py  tsconfig.json
examples/06-llm-research-agent/: README.md  agent.py  compare.py  pyproject.toml
mcp-servers/notion/: Dockerfile  README.md  pyproject.toml
mcp-servers/notion/tests/: conftest.py  test_tools.py
mock-mcp-server/: Dockerfile  README.md  pyproject.toml
mock-mcp-server/src/mock_mcp/: __init__.py  __main__.py  fixtures.py  logging_config.py  server.py  settings.py  tools.py
mock-mcp-server/tests/: conftest.py  test_metrics.py  test_server.py  test_tools.py
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: conftest.py  test_agent.py  test_channels.py  test_client.py  test_identity.py  test_llm.py  test_llm_providers.py  test_locks.py  test_multi_region.py  test_proxy_client.py  test_quotas.py  test_tokens.py  test_tools.py  test_transactions.py  test_workers.py  test_workflow_retries.py  test_workflow_runtime.py  test_workflows.py  test_workspace.py
services/dashboard/: Dockerfile  README.md  pyproject.toml
services/dashboard/tests/: conftest.py  test_metrics.py  test_overview.py  test_replay_studio.py  test_server.py  test_studio_v2.py  test_tenants_admin.py  test_timeseries.py
services/dashboard/web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  welcome.html
services/embedded/: README.md  pyinstaller.spec  pyproject.toml
services/embedded/tests/: test_smoke.py
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/migrations/: 0003_oauth.sql  0004_tenancy_rollback.sql  0005_audit_chain_rollback.sql  0006_oauth_metadata_rollback.sql  README.md
services/gateway/tests/: conftest.py  test_anomaly.py  test_api.py  test_audit.py  test_audit_chain.py  test_cache.py  test_compliance.py  test_coordination.py  test_cost_by_agent.py  test_cost_caps.py  test_encryption.py  test_jwt_auth.py  test_jwt_auth_rs256.py  test_limits.py  test_load_shed.py  test_metrics.py  test_migration_rollback.py  test_migrations.py  test_oauth.py  test_oauth_google.py  test_oauth_notion.py  test_oauth_providers.py  test_oauth_v15_providers.py  test_otlp.py  test_otlp_attributes.py  test_postgres_driver.py  test_proxy.py  test_rate_limit.py  test_regions.py  test_registry.py  test_revocation_cache.py  test_storage_drivers.py  test_tenant_quotas.py  test_transactions.py
services/identity/: Dockerfile  README.md  pyproject.toml
services/identity/migrations/: 0001_initial.sql  0001_initial_rollback.sql  0002_signing_keys.sql  0003_tenant_quotas_rollback.sql  README.md
services/identity/tests/: conftest.py  test_api.py  test_compliance.py  test_coordination.py  test_jwt_io.py  test_keys.py  test_metrics.py  test_migration_rollback.py  test_migrations.py  test_postgres_driver.py  test_quotas.py  test_regions.py  test_revocation.py  test_revocations.py  test_storage_drivers.py  test_tenants.py
services/proxy/: README.md  fly.toml  pyproject.toml  railway.json  render.yaml
services/proxy/docs/: integrations.md
services/proxy/tests/: test_anthropic_adapter.py  test_api_streaming.py  test_azure_openai.py  test_bedrock_adapter.py  test_bedrock_streaming.py  test_cohere_adapter.py  test_cohere_streaming.py  test_completions.py  test_context_budget.py  test_cross_call_merging.py  test_error_envelopes.py  test_gateway_client.py  test_gemini_adapter.py  test_gemini_streaming.py  test_identity_client.py  test_metrics.py  test_openai_compat.py  test_policy_engine.py  test_postgres_sink.py  test_readyz.py  test_request_id.py  test_responses_adapter.py  test_responses_streaming.py  (+6 more)
services/workspace/: Dockerfile  README.md  pyproject.toml
tests/contract/: README.md  pyproject.toml
worker/: Dockerfile  README.md  pyproject.toml
worker/tests/: conftest.py  test_worker.py
(+982 files in other folders)
