[project]
name = "plinth-workflow-worker"
version = "0.5.0"
description = "Plinth durable workflow worker — leases pending workflow steps and executes their handlers"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "The Plinth Authors"},
]
dependencies = [
    # The SDK is installed alongside the worker via the Plinth monorepo
    # editable install. We pin a minimum here for documentation purposes
    # but never let pip resolve it directly — if you're packaging this
    # outside the monorepo, build the SDK first and install both.
    "structlog>=24.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.3",
]

[project.scripts]
plinth-workflow-worker = "plinth_workflow_worker.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RET"]
