[project]
name = "plinth-example-resumable-workflow"
version = "0.1.0"
description = "Plynf example #3: crash + resume via workflow snapshots"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "plinth",
    "tiktoken>=0.6",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
live = ["anthropic>=0.34"]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["shared", "workflow_agent", "crash_resume"]
