[project]
name = "plinth-example-durable-workflow"
version = "0.5.0"
description = "Plinth example #5: durable workflow execution via worker pool"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "plinth",
    "plinth-workflow-worker",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["shared", "handlers", "start_workflow"]
