[project]
name = "plinth-example-llm-research-agent"
version = "0.1.0"
description = "Plinth — research-agent demo using the v1.2 client.llm namespace"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "plinth",
    "tiktoken>=0.6",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
live = ["plinth[anthropic]"]
openai = ["plinth[openai]"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "compare"]
