[project]
name = "plinth"
version = "0.1.0"
description = "Plinth Python SDK — the agent-native runtime client"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "The Plinth Authors"}]
requires-python = ">=3.11"
keywords = ["ai", "agents", "mcp", "tools", "workspace", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "tiktoken>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "black>=26.3.1",
]

[project.urls]
Homepage = "https://github.com/your-org/plinth"
Documentation = "https://github.com/your-org/plinth/blob/main/sdk/python/README.md"
Repository = "https://github.com/your-org/plinth"
Issues = "https://github.com/your-org/plinth/issues"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RET"]

[tool.coverage.run]
source = ["plinth"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
