[project]
name = "plinth"
version = "0.1.0"
description = "Plinth Python SDK — the agent-native runtime client"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "The Plinth Authors"}]
requires-python = ">=3.11"
keywords = ["ai", "agents", "mcp", "tools", "workspace", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.5",
    "tiktoken>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
    "black>=24.1",
]
# v1.2 — LLM provider extras. Users opt into the providers they need:
#   pip install 'plinth[anthropic]'
#   pip install 'plinth[openai]'
#   pip install 'plinth[all]'  # both
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.40"]
all = ["anthropic>=0.30", "openai>=1.40"]

[project.urls]
Homepage = "https://github.com/your-org/plinth"
Documentation = "https://github.com/your-org/plinth/blob/main/sdk/python/README.md"
Repository = "https://github.com/your-org/plinth"
Issues = "https://github.com/your-org/plinth/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RET"]

[tool.coverage.run]
source = ["plinth"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
