[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plinth-gateway"
version = "0.1.0"
description = "Plinth tool gateway — MCP proxy with caching, audit, auth"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "The Plinth Authors"}]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "python-ulid>=2.2",
    "structlog>=24.1",
    "cryptography>=42.0",
    # JWT verification (HS256 + RS256). The crypto extra is required for
    # the RS256 path because PyJWT defers RSA support to ``cryptography``.
    "pyjwt[crypto]>=2.8",
    # v0.4 — OTLP/HTTP log emission for the audit event stream.
    # Pinned <1.30 because 1.30 changed the internal _logs API and broke
    # our LoggerProvider/BatchLogRecordProcessor wiring. Re-pin once we
    # migrate to the public logs API.
    "opentelemetry-api>=1.25,<1.30",
    "opentelemetry-sdk>=1.25,<1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
    "black>=24.1",
]
postgres = [
    "asyncpg>=0.29",
]

[project.scripts]
plinth-gateway = "plinth_gateway.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plinth_gateway = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "postgres: requires a running Postgres instance (set PLINTH_TEST_POSTGRES_URL)",
]

[tool.coverage.run]
source = ["plinth_gateway"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RET"]

[tool.black]
line-length = 100
target-version = ["py311"]
