[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plinth-gateway"
version = "0.1.0"
description = "Plynf tool gateway — MCP proxy with caching, audit, auth"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "The Plynf Authors"}]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "python-ulid>=2.2",
    "structlog>=24.1",
    "cryptography>=42.0",
    # JWT verification (HS256 + RS256). The crypto extra is required for
    # the RS256 path because PyJWT defers RSA support to ``cryptography``.
    "pyjwt[crypto]>=2.8",
    # v0.4 — OTLP/HTTP log emission for the audit event stream.
    # v1.1 — pin lifted. The emitter now uses a try-import wrapper
    # (``otlp_emitter._import_otel_logs``) that prefers
    # ``opentelemetry.sdk.logs`` when upstream promotes the public path
    # and falls back to ``opentelemetry.sdk._logs`` (still canonical
    # through 1.41). See CONTRACTS.md v1.1 — "OTel — public logs API".
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    # v1.1 — pluggable coordination backend. The MemoryBackend is the
    # default; ``redis`` is opt-in via ``PLINTH_COORDINATION_BACKEND=redis``
    # but the dependency is light enough to ship as a base import.
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
    "black>=24.1",
    # v1.1 — pure-Python redis emulator for the coordination backend tests.
    "fakeredis>=2.20",
]
postgres = [
    "asyncpg>=0.29",
]

[project.scripts]
plinth-gateway = "plinth_gateway.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plinth_gateway = ["py.typed", "migrations/*.sql", "migrations/*_rollback.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "postgres: requires a running Postgres instance (set PLINTH_TEST_POSTGRES_URL)",
]

[tool.coverage.run]
source = ["plinth_gateway"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RET"]

[tool.black]
line-length = 100
target-version = ["py311"]
