[project]
name = "plinth-identity"
version = "0.3.0"
description = "Plynf identity service — JWT capability tokens with revocation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "The Plynf Authors"},
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "python-ulid>=2.2",
    "structlog>=24.1",
    "pyjwt[crypto]>=2.8",
    # Used directly for RS256 key generation, AES-GCM private-key wrapping,
    # and JWK<->PEM projection. Already transitively present via pyjwt[crypto]
    # but pinned here so a future refactor doesn't break key handling.
    "cryptography>=42.0",
    # v1.1 — pluggable coordination backend. The MemoryBackend is the
    # default; ``redis`` is opt-in via ``PLINTH_COORDINATION_BACKEND=redis``.
    "redis>=5.0",
    # Used in regions.py for async HTTP peer probing (inter-region health).
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "black>=24.1",
    # v1.1 — pure-Python redis emulator for the coordination backend tests.
    "fakeredis>=2.20",
]
postgres = [
    "asyncpg>=0.29",
]

[project.scripts]
plinth-identity = "plinth_identity.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plinth_identity = ["migrations/*.sql", "migrations/*_rollback.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "postgres: requires a running Postgres instance (set PLINTH_TEST_POSTGRES_URL)",
]

[tool.coverage.run]
source = ["src/plinth_identity"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RET"]

[tool.black]
line-length = 100
target-version = ["py311"]
