[project]
name = "plinth-workspace"
version = "0.1.0"
description = "Plinth workspace service — versioned KV + file storage for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "The Plinth Authors"},
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "python-ulid>=2.2",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    # JWT verification (HS256 + RS256). The crypto extra is required for
    # the RS256 path because PyJWT defers RSA support to ``cryptography``.
    "pyjwt[crypto]>=2.8",
    # Used directly by the JWKS verifier to reconstruct PEMs from JWK
    # (n, e) pairs. Already pulled in transitively via pyjwt[crypto] but
    # pinned here so the explicit import doesn't surprise a future
    # dependency audit.
    "cryptography>=42.0",
    # JWKS fetches against the identity service (verify_local + RS256).
    "httpx>=0.27",
    # v0.5: typed channels validate payloads against an attached JSON
    # Schema. Keep the version floor at 4.20 so we get the Draft 2020-12
    # validator + the new ``check_schema`` static helper.
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "black>=24.1",
]
postgres = [
    "asyncpg>=0.29",
]

[project.scripts]
plinth-workspace = "plinth_workspace.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "postgres: requires a running Postgres instance (set PLINTH_TEST_POSTGRES_URL)",
]

[tool.coverage.run]
source = ["src/plinth_workspace"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RET"]

[tool.black]
line-length = 100
target-version = ["py311"]
