# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plinth-contract-tests"
version = "1.0.0"
description = "Plynf — OpenAPI contract test suite. Verifies that running services match the v1 specs and flags breaking changes between snapshots."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "The Plynf Authors" },
]
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
